rewrite codes for value comparison in SqlEngine.cc. add a function for checkValueConds

--- a/Bruinbase/.gitignore
+++ b/Bruinbase/.gitignore
@@ -27,3 +27,18 @@
 *.exe
 *.out
 *.app
+/large.del
+/large.idx
+/large.tbl
+/medium.del
+/medium.idx
+/medium.tbl
+/small.del
+/small.idx
+/small.tbl
+/xlarge.del
+/xlarge.idx
+/xlarge.tbl
+/xsmall.del
+/xsmall.idx
+/xsmall.tbl
